--- a/Paginas/contact/contact.html
+++ b/Paginas/contact/contact.html
@@ -144,7 +144,7 @@
                         <input type="text" placeholder="Email" class="form_email" name="email" required>
                         <textarea class="form_message" placeholder="Write your message" required></textarea>
                     </div>
-                    <input type="submit" class="form_submit" value="SEND">
+                    <input type="submit" class="form_submit" value="SUBMIT">
                 </form>
             </div>
         </section>
