--- a/Paginas/services/services.html
+++ b/Paginas/services/services.html
@@ -121,7 +121,7 @@
             </section>
         </section>
     </main>
-    <footer class="titulos spanish">
+    <footer class="spanish_footer">
         <section class="contacto_footer">
             <h5>¡Contactame!</h5>
             <div class="buttons">
@@ -255,7 +255,7 @@
             <div class="back_red"></div>
         </section>
     </main>
-    <footer class="titulos english">
+    <footer class="english_footer">
         <section class="contacto_footer">
             <h5>Contact me</h5>
             <div class="buttons">
