--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <div class="sectionHola">
                 <h2 class="hola">HI!</h2>
                 <h4 class="hola2">My name is Ivana</h4>
-                <P>    I am an industrial and UX/UI designer. I developed myself professionally in the area of marketing and digital design, where i found the way to fuse everything that I am passionate about.
+                <P>    I am an industrial and UX/UI designer. I developed myself professionally in the area of marketing and digital design, where I found the way to fuse everything that I am passionate about.
                     <br>
                 I am distinguished by my focus on research, analysis and the development of creative strategies that makes the user the protagonist, in order to bring him the best experience possible.
                 </P>
@@ -197,7 +197,7 @@
         </section>
 
         <section class="sectionAyudarte">
-            <h3>¿En que puedo ayudarte?</h3>
+            <h3>How can I help you?</h3>
                 <div class="section2">
                     <div class="brandingHome">
                         <h4>BRANDING</h4>
