--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Style -->
-    <link rel="stylesheet" href="./css/styles.css">
+    
+    <link rel="stylesheet" href="./scss/styles.css">
 </head>
 <body onload="checkLanguage()">
     <!-- ESPAÑOL -->
@@ -32,7 +33,6 @@
                         <li class="nav_item"><a href="./Paginas/about/about.html" class="nav_link nav_linkMenu">SOBRE MI</a></li>
                         <li class="nav_item"><a href="./Paginas/contact/contact.html" class="nav_link nav_linkMenu">CONTACTO</a></li>
                         <button class="btn_idioma" id="btn_ingles">
-
                             <span><img class="ingles_img" src="./img/flag-england.png" alt="ingles"></span>
                         </button>
                     </ul>
@@ -301,6 +301,7 @@
         </section>
     </footer>
     <!-- Js Funciones -->
+    <script src="./Javascript/nav.js"></script>
     <script src="./Javascript/home.js"></script>
     <script src="./Javascript/main.js"></script>
 </body>
