servicios y proyectos funcional en idiomas

--- a/Paginas/about/about.html
+++ b/Paginas/about/about.html
@@ -15,17 +15,16 @@
     <!-- Style -->
     <link rel="stylesheet" href="../../css/styles.css">
 </head>
-<body onload="checkLanguage()">
+<body>
     <header class="header spanish">
         <nav class="navbar">
                 <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
-                <button class="boton" id="boton_menu">
+                <button class="boton" id="btnMenu">
                     <i class="bi bi-list"></i>
                 </button>    
                     <ul class="navbarList" id="navbar">
                         <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">INICIO</a></li>
-                        <li class="nav_item">
-                            <a href="../services/services.html" class="nav_link nav_linkMenu">SERVICIOS</a></li>
+                        <li class="nav_item"><a href="../services/services.html" class="nav_link nav_linkMenu">SERVICIOS</a></li>
                         <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu">PROYECTOS</a></li>
                         <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu nav_linkMenu__active">SOBRE MI</a></li>
                         <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu">CONTACTO</a></li>
@@ -177,8 +176,8 @@
                     <i class="bi bi-list"></i>
                 </button>    
                     <ul class="navbarList" id="navbar">
-                        <li class="nav_item"><a href="../../Home/index.html" class="nav_link nav_linkMenu">HOME</a></li>
-                        <li class="nav_item"><a href="../services/services.html" class="nav_link nav_linkMenu">SERVICES</a></li>
+                        <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">HOME</a></li>
+                        <li class="nav_item container--submenu"><a href="../services/services.html" class="nav_link nav_linkMenu submenu-btn">SERVICES</a></li>
                         <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu">PROJECTS</a></li>
                         <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu nav_linkMenu__active">ABOUT</a></li>
                         <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu">CONTACT</a></li>
@@ -288,7 +287,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer_english">
+    <footer class="english_footer">
         <section class="contacto_footer">
             <h5>Contact me</h5>
             <div class="buttons">
@@ -338,5 +337,4 @@
         </section>
     </footer>
     <!-- Js Funciones -->
-    <script src="../../Javascript/main.js"></script>
 </body>
