--- a/Paginas/projects/projects.html
+++ b/Paginas/projects/projects.html
@@ -28,7 +28,7 @@
                         <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu nav_linkMenu__active">PROYECTOS</a></li>
                         <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">SOBRE MI</a></li>
                         <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu">CONTACTO</a></li>
-                        <button class="btn_idioma" id="btn_ingles">
+                        <button class="btn_idioma" id="btn_ingles" onclick="checkStatusPro()">
                             <span><img class="ingles_img" src="../../img/flag-england.png" alt="ingles"></span>
                         </button>
                     </ul>
@@ -38,9 +38,9 @@
         <section class="sectionAll">
             <nav class="sidebarServicios">
                 <ul class="sidebar_List">
-                    <li class="linkSidebar" id="branding">BRANDING</li>
-                    <li class="linkSidebar" id="digital">DIGITAL</li>
-                    <li class="linkSidebar" id="comunicacion">COMUNICACION</li>
+                    <li class="linkSidebar" id="branding_esp">BRANDING</li>
+                    <li class="linkSidebar" id="digital_esp">DIGITAL</li>
+                    <li class="linkSidebar" id="comunicacion_esp">COMUNICACION</li>
                 </ul>
             </nav>
                 <section class="projects_branding sectBranding" id="branding">
@@ -241,7 +241,7 @@
                             <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu nav_linkMenu__active">PROJECTS</a></li>
                             <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">ABOUT</a></li>
                             <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu">CONTACT</a></li>
-                            <button class="btn_idioma" id="btn_español">
+                            <button class="btn_idioma" id="btn_español" onclick="checkStatusPro()">
                                 <span><img class="español_img" src="../../img/flag3-spain-removebg-preview.png" alt="español"></span>
                             </button>
                         </ul>
@@ -251,9 +251,9 @@
         <section class="sectionAll">
             <nav class="sidebarServicios">
                 <ul class="sidebar_List">
-                    <li class="linkSidebar" id="branding">BRANDING</li>
-                    <li class="linkSidebar" id="digital">DIGITAL</li>
-                    <li class="linkSidebar" id="comunicacion">COMUNICATION</li>
+                    <li class="linkSidebar" id="branding_ing">BRANDING</li>
+                    <li class="linkSidebar" id="digital_ing">DIGITAL</li>
+                    <li class="linkSidebar" id="comunicacion_ing">COMUNICATION</li>
                 </ul>
             </nav>
                 <section class="projects_branding sectBranding" id="branding">
