--- a/index.html
+++ b/index.html
@@ -226,26 +226,26 @@
 
         <section class="sectionProyectos">
             <h3>My projects</h3>
-            <div class="proyectos">
-                 <a href="" class="proy1_6 digital img1" >
+            <div class="proyectos proyectos1">
+                 <a href="./Paginas/services/services.html" class="proy1_6 img1 digital1" id="img1">
                      <p>DIGITAL</p>
                  </a>
-                 <a href="" class="proy2_5 img2">
+                 <a href="./Paginas/services/services.html" class="proy2_5 img2 branding1" id="img2">
                      <p>BRANDING</p>
                  </a>
              
-                 <a href="" class="proy2_5 img3">
-                     <p>COMUNICATION</p>
+                 <a href="./Paginas/services/services.html" class="proy2_5 img3 comunicacion1" id="img3">
+                     <p>COMUNICATIN</p>
                  </a>
              </div> 
-             <div class="proyectos">
-                 <a href="" class="proy2_5 img4">
+             <div class="proyectos proyectos2">
+                 <a href="./Paginas/projects/projects.html" class="proy2_5 img4 digital2" id="img4">
                      <p>DIGITAL</p>
                  </a>
-                 <a href="" class="proy2_5 img5 comunicacion">
+                 <a href="./Paginas/projects/projects.html" class="proy2_5 img5 comunicacion2" id="img5">
                      <p>COMUNICATION</p>
                  </a>
-                 <a href="" class="proy1_6 img6">
+                 <a href="./Paginas/projects/projects.html" class="proy1_6 img6 branding2" id="img6">
                      <p>BRANDING</p>
                  </a>
              </div>
