--- a/Paginas/services/services.html
+++ b/Paginas/services/services.html
@@ -15,7 +15,7 @@
     <!-- Style -->
     <link rel="stylesheet" href="../../css/styles.css">
 </head>
-<body onload="checkStatus()">
+<body onload="checkStatus(); checkLanguage()">
     <header class="header spanish">
         <nav class="navbar">
                 <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
@@ -24,10 +24,13 @@
                 </button>    
                     <ul class="navbarList" id="navbar">
                         <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">INICIO</a></li>
-                        <li class="nav_item"><a href="../services/services.html" class="nav_link nav_linkMenu nav_linkMenu__active">SERVICIOS</a></li>
+                        <li class="nav_item"><a href="../services/services.html" class="nav_link nav_linkMenu  nav_linkMenu__active">SERVICIOS</a></li>
                         <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu">PROYECTOS</a></li>
                         <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">SOBRE MI</a></li>
                         <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu">CONTACTO</a></li>
+                        <button class="btn_idioma" id="btn_ingles" onclick="checkStatus()">
+                            <span><img class="ingles_img" src="../../img/flag-england.png" alt="ingles"></span>
+                        </button>
                     </ul>
             </nav>
     </header>
@@ -35,9 +38,9 @@
         <section class="sectionAll">
             <nav class="sidebarServicios">
                 <ul class="sidebar_List">
-                    <li class="linkSidebar" id="branding">BRANDING</li>
-                    <li class="linkSidebar" id="digital">DIGITAL</li>
-                    <li class="linkSidebar" id="comunicacion">COMUNICACION</li>
+                    <li class="linkSidebar" id="branding_esp">BRANDING</li>
+                    <li class="linkSidebar" id="digital_esp">DIGITAL</li>
+                    <li class="linkSidebar" id="comunicacion_esp">COMUNICACION</li>
                 </ul>
             </nav>
             <section class="sectionServicios sectBranding" id="spanish">
@@ -65,6 +68,7 @@
                             <div class="back_red"></div>
                         </div>
                     </div>
+
             </section>
             <section class="sectionServicios2 sectDigital" id="spanish">
                 <div class="title_Servicios">
@@ -173,86 +177,110 @@
     <!-- INGLES -->
     <header class="header english">
         <nav class="navbar">
-                <a href="../../Home/index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
+                <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
                 <button class="boton" id="boton_menu">
                     <i class="bi bi-list"></i>
                 </button>    
                     <ul class="navbarList" id="navbar">
-                        <li class="nav_item"><a href="../../Home/index.html" class="nav_link nav_linkMenu">HOME</a></li>
-                        <li class="nav_item container--submenu"><a href="../services/services.html" class="nav_link nav_linkMenu submenu-btn">SERVICES</a></li>
+                        <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">HOME</a></li>
+                        <li class="nav_item container--submenu"><a href="../services/services.html" class="nav_link nav_linkMenu submenu-btn   nav_linkMenu__active">SERVICES</a></li>
                         <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu">PROJECTS</a></li>
-                        <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu nav_linkMenu__active">ABOUT</a></li>
+                        <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">ABOUT</a></li>
                         <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu">CONTACT</a></li>
+                        <button class="btn_idioma" id="btn_español" onclick="checkStatus()">
+                            <span><img class="español_img" src="../../img/flag3-spain-removebg-preview.png" alt="español"></span>
+                        </button>
                     </ul>
             </nav>
     </header>
     <main class="english">
-        <section id="services_branding english">
-            <div>
-                <h2>Identity, strategies and campaigns.</h2>
-                <p>In order to achieve a solid and integral project, we need to define and create the design of the brand s identity with al the graphic and digital elements that it would need.</p>
-            </div>
-            <div>
-                <p>My tasks:</p>
-                <ul>
-                    <li>Creation of the brand.</li>
-                    <li>Find the target audience.</li>
-                    <li>Purposes and values of the brand.</li>
-                    <li>Style and comunication manual.</li>
-                    <li>In case of not having a logo: Logotype, isotype, imagotype, isologist.</li>
-                    <li>Corporate identity and logo redesign.</li>
+        <section class="sectionAll">
+            <nav class="sidebarServicios">
+                <ul class="sidebar_List">
+                    <li class="linkSidebar" id="branding_ing">BRANDING</li>
+                    <li class="linkSidebar" id="digital_ing">DIGITAL</li>
+                    <li class="linkSidebar" id="comunicacion_ing">COMUNICATION</li>
                 </ul>
-                <button>View projects</button>
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div class="back_red"></div>
-        </section>
-        <section id="services_digital english">
-            <div>
-                <h2>UX/UI, Web and App design</h2>
-                <p>I work on the design of digital products based on the user experience. With researches and usability tests I will guarantee that your web page or app could be succesfully used by the users.</p> 
-            </div>
-            <div>
-                <p>My tasks:</p>
-                <ul>
-                    <li>Current product and competitors analysis.</li> 
-                    <li>Problem solving focus on the user.</li> 
-                    <li>Interviews, observations and field studies.</li> 
-                    <li>User creations.</li> 
-                    <li>Tests of usability, user experience and recomendations.</li> 
-                    <li>Creation of design sistems and style manual.</li> 
-                </ul>
-                <button>View projects</button>
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div class="back_red"></div>
-        </section>
-        <section id="services_comunicaion english">
-            <div>
-                <h2>Social media, contents and strategies. </h2> 
-                <p>In order to gain a bigger range of users on your social media it is not only necessary to manage them. It is also needed to generate, plan and design the content posted.</p>
-            </div> 
-            <div>
-                <p>My tasks:</p>
-                <ul>
-                    <li>Marketing and content strategy.</li>  
-                    <li>Planification and calendar of the content.</li> 
-                    <li>Analysis and stadistics.</li> 
-                    <li>Monitorize the brand and their competitors.</li> 
-                    <li>Tendencies.</li> 
-                    <li>Advertising campaigns.</li> 
-                    <li>Design digital content.</li>
-                </ul>
-                <button>View projects</button>
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div class="back_red"></div>
+            </nav>
+            <section class="sectionServicios sectBranding" id="spanish">
+                    <div class="title_Servicios">
+                        <h2 class="title_Servicios__titulo">Identity, strategies and campaigns.</h2>
+                        <p class="title_Servicios__texto">In order to achieve a solid and integral project, we need to define and create the design of the brand s identity with al the graphic and digital elements that it would need.</p>
+                    </div>
+                    <div class="sectionList_Servicios">
+                        <div class="list_tareas_Servicios">
+                            <p class="tareas_servicios">My tasks:</p>
+                            <ul class="ul_servicios">
+                                <li class="item_servicios">Creation of the brand.</li>
+                                <li class="item_servicios">Find the target audience.</li>
+                                <li class="item_servicios">Purposes and values of the brand.</li>
+                                <li class="item_servicios">Style and comunication manual.</li>
+                                <li class="item_servicios">In case of not having a logo: Logotype, isotype, imagotype, isologist.</li>
+                                <li class="item_servicios">Corporate identity and logo redesign.</li>
+                            </ul>
+                            <button class="botonservicios">SEE PROJECTS</button>
+                        </div>
+                        <div class="serviciosBox">
+                            <div class="imagenBox">
+                                <img class="imagen_Servicios" src="../../img/img-services.png" alt="imagen servicios">
+                            </div>
+                            <div class="back_red"></div>
+                        </div>
+                    </div>
+            </section>
+            <section class="sectionServicios2 sectDigital" id="spanish">
+                <div class="title_Servicios">
+                    <h2 class="title_Servicios__titulo">UX/UI, Web and App design</h2>
+                    <p class="title_Servicios__texto">I work on the design of digital products based on the user experience. With researches and usability tests I will guarantee that your web page or app could be succesfully used by the users.</p>
+                </div>
+                <div class="sectionList_Servicios">
+                    <div class="list_tareas_Servicios">
+                        <p class="tareas_servicios">My tasks:</p>
+                        <ul class="ul_servicios">
+                            <li class="item_servicios">Current product and competitors analysis.</li>
+                            <li class="item_servicios">Problem solving focus on the user.</li>
+                            <li class="item_servicios">Interviews, observations and field studies.</li>
+                            <li class="item_servicios">User creations.</li>
+                            <li class="item_servicios">Tests of usability, user experience and recomendations.</li>
+                            <li class="item_servicios">Creation of design sistems and style manual.</li>
+                        </ul>
+                        <button class="botonservicios">SEE PROJECTS</button>
+                    </div>
+                    <div class="serviciosBox">
+                        <div class="imagenBox">
+                            <img class="imagen_Servicios" src="../../img/img-serv_digital.png" alt="">
+                        </div>
+                        <div class="back_red"></div>
+                    </div>
+                </div>
+            </section>
+            <section class="sectionServicios3 sectComunicacion"  id="spanish">
+                <div class="title_Servicios">
+                    <h2 class="title_Servicios__titulo">Social media, contents and strategies</h2>
+                    <p class="title_Servicios__texto">In order to gain a bigger range of users on your social media it is not only necessary to manage them. It is also needed to generate, plan and design the content posted.</p>
+                </div>
+                <div class="sectionList_Servicios">
+                    <div class="list_tareas_Servicios">
+                        <p class="tareas_servicios">My tasks:</p>
+                        <ul class="ul_servicios">
+                            <li class="item_servicios">Marketing and content strategy.</li>     
+                            <li class="item_servicios">Planification and calendar of the content.</li>
+                            <li class="item_servicios">Analysis and stadistics.</li>
+                            <li class="item_servicios">Monitorize the brand and their competitors.</li>
+                            <li class="item_servicios">Trendings.</li>
+                            <li class="item_servicios">Advertising campaigns.</li>
+                            <li class="item_servicios">Design digital content.</li>
+                        </ul>
+                        <button class="botonservicios">SEE PROJECTS</button>
+                    </div>
+                    <div class="serviciosBox3">
+                        <div class="imagenBox">
+                            <img class="imagen_Servicios" src="../../img/img-serv_com.png" alt="">
+                        </div>
+                        <div class="back_red"></div>
+                    </div>
+                </div>
+            </section>
         </section>
     </main>
     <footer class="english_footer">
@@ -308,3 +336,72 @@
     <script src="../../Javascript/main.js"></script>
     <script src="../../Javascript/servicios.js"></script>
 </body>
+<main class="english">
+    <section id="services_branding english">
+        <div>
+            <h2>Identity, strategies and campaigns.</h2>
+            <p>In order to achieve a solid and integral project, we need to define and create the design of the brand s identity with al the graphic and digital elements that it would need.</p>
+        </div>
+        <div>
+            <p>My tasks:</p>
+            <ul>
+                <li>Creation of the brand.</li>
+                <li>Find the target audience.</li>
+                <li>Purposes and values of the brand.</li>
+                <li>Style and comunication manual.</li>
+                <li>In case of not having a logo: Logotype, isotype, imagotype, isologist.</li>
+                <li>Corporate identity and logo redesign.</li>
+            </ul>
+            <button>View projects</button>
+        </div>
+        <div>
+            <img src="" alt="">
+        </div>
+        <div class="back_red"></div>
+    </section>
+    <section id="services_digital english">
+        <div>
+            <h2>UX/UI, Web and App design</h2>
+            <p>I work on the design of digital products based on the user experience. With researches and usability tests I will guarantee that your web page or app could be succesfully used by the users.</p> 
+        </div>
+        <div>
+            <p>My tasks:</p>
+            <ul>
+                <li>Current product and competitors analysis.</li> 
+                <li>Problem solving focus on the user.</li> 
+                <li>Interviews, observations and field studies.</li> 
+                <li>User creations.</li> 
+                <li>Tests of usability, user experience and recomendations.</li> 
+                <li>Creation of design sistems and style manual.</li> 
+            </ul>
+            <button>View projects</button>
+        </div>
+        <div>
+            <img src="" alt="">
+        </div>
+        <div class="back_red"></div>
+    </section>
+    <section id="services_comunicaion english">
+        <div>
+            <h2>Social media, contents and strategies. </h2> 
+            <p>In order to gain a bigger range of users on your social media it is not only necessary to manage them. It is also needed to generate, plan and design the content posted.</p>
+        </div> 
+        <div>
+            <p>My tasks:</p>
+            <ul>
+                <li>Marketing and content strategy.</li>  
+                <li>Planification and calendar of the content.</li> 
+                <li>Analysis and stadistics.</li> 
+                <li>Monitorize the brand and their competitors.</li> 
+                <li>Tendencies.</li> 
+                <li>Advertising campaigns.</li> 
+                <li>Design digital content.</li>
+            </ul>
+            <button>View projects</button>
+        </div>
+        <div>
+            <img src="" alt="">
+        </div>
+        <div class="back_red"></div>
+    </section>
+</main>
