--- a/Paginas/about/about.html
+++ b/Paginas/about/about.html
@@ -15,7 +15,7 @@
     <!-- Style -->
     <link rel="stylesheet" href="../../css/styles.css">
 </head>
-<body>
+<body onload="checkLanguage()">
     <header class="header spanish">
         <nav class="navbar">
                 <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
@@ -337,4 +337,5 @@
         </section>
     </footer>
     <!-- Js Funciones -->
+    <script src="../../Javascript/main.js"></script>
 </body>
