arreglando navbar responsive

--- a/Paginas/services/services.html
+++ b/Paginas/services/services.html
@@ -15,7 +15,7 @@
     <!-- Style -->
     <link rel="stylesheet" href="../../css/styles.css">
 </head>
-<body onload="checkStatus(); checkLanguage()">
+<body onload="checkStatus()">
     <header class="header spanish">
         <nav class="navbar">
                 <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
