--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     
     <link rel="stylesheet" href="./scss/styles.css">
 </head>
-<body onload="checkLanguage()">
+<body>
     <!-- ESPAÑOL -->
     <header class="header spanish">
         <nav class="navbar">
                 <a href="./index.html" class="logo nav_link"><img src="./img/Component 1.svg" class="logo_svg" alt="logo">
                     <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
                 </a>
-                <button class="boton" id="boton_menu">
+                <button class="boton" id="nav_esp">
                     <i class="bi bi-list"></i>
                 </button>    
                     <ul class="navbarList" id="navbar">
@@ -164,8 +164,10 @@
     <!-- INGLES -->
     <header class="header english">
         <nav class="navbar">
-                <a href="./index.html" class="logo nav_link"><img src="./img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
-                <button class="boton" id="boton_menu">
+                <a href="./index.html" class="logo nav_link"><img src="./img/Component 1.svg" class="logo_svg" alt="logo">
+                    <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
+                </a>
+                <button class="boton" id="nav_ing">
                     <i class="bi bi-list"></i>
                 </button>    
                     <ul class="navbarList" id="navbar">
@@ -178,8 +180,10 @@
                             <span><img class="español_img" src="./img/flag3-spain-removebg-preview.png" alt="español"></span>
                         </button>
                     </ul>
-            </nav>
+        </nav>
     </header>
+
+    </button>
     <main class="main_top english">
         <section class="section1">
             <div class="sectionHola">
@@ -235,7 +239,7 @@
                  </a>
              
                  <a href="./Paginas/services/services.html" class="proy2_5 img3 comunicacion1" id="img3">
-                     <p>COMUNICATIN</p>
+                     <p>COMUNICATION</p>
                  </a>
              </div> 
              <div class="proyectos proyectos2">
@@ -301,7 +305,6 @@
         </section>
     </footer>
     <!-- Js Funciones -->
-    <script src="./Javascript/nav.js"></script>
     <script src="./Javascript/home.js"></script>
     <script src="./Javascript/main.js"></script>
 </body>
