--- a/Paginas/contact/contact.html
+++ b/Paginas/contact/contact.html
@@ -13,16 +13,16 @@
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Style -->
-    <link rel="stylesheet" href="../../scss/styles.css">
+    <link rel="stylesheet" href="../../css/styles.css">
 </head>
-<body onload="checkLanguage()">
+<body>
     <header class="header spanish">
         <nav class="navbar">
                 <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
                 <button class="boton" id="boton_menu">
                     <i class="bi bi-list"></i>
                 </button>    
-                    <ul class="navbarList" id="navbar">
+                    <ul class="navbarList nav_inactive" id="navbar">
                         <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">INICIO</a></li>
                         <li class="nav_item container--submenu"><a href="../services/services.html" class="nav_link nav_linkMenu submenu-btn">SERVICIOS</a></li>
                         <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu">PROYECTOS</a></li>
@@ -114,7 +114,7 @@
                 <button class="boton" id="boton_menu">
                     <i class="bi bi-list"></i>
                 </button>    
-                    <ul class="navbarList" id="navbar">
+                    <ul class="navbarList nav_inactive" id="navbar">
                         <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">HOME</a></li>
                         <li class="nav_item container--submenu"><a href="../services/services.html" class="nav_link nav_linkMenu submenu-btn">SERVICES</a></li>
                         <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu">PROJECTS</a></li>
