--- a/Paginas/projects/projects.html
+++ b/Paginas/projects/projects.html
@@ -13,7 +13,7 @@
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Style -->
-    <link rel="stylesheet" href="../../css/styles.css">
+    <link rel="stylesheet" href="../../scss/styles.css">
 </head>
 <body onload="checkStatusPro()">
     <header class="header spanish">
@@ -209,22 +209,27 @@
                 <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
                 <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
             </section>
+            <button class="btn_responsive"></button>
             <section class="design_footer">
-                <h5>Diseño Web:</h5>
-                <ul>
-                    <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
-                    </li>
-                    <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
-    
-                    </li>
-                    <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
-                    </li>
-                    <li>
-                        <p><a href=""><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
-                    </li>
+                <h5 class="title_footer1">Diseño Web:</h5>
+                <h5 class="title_footer2">Diseño y desarrollo</h5>
+                <ul class="design_list_resp">
+                    <div class="design_resp1">
+                        <li>
+                            <p><a href=""><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                        </li>
+                        <li>
+                            <p><a href=""><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                        </li>
+                    </div>
+                    <div class="design_resp2">
+                        <li>
+                            <p><a href=""><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                        </li>
+                        <li>
+                            <p><a href=""><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                        </li>
+                    </div>
                 </ul>
             </section>
         </footer>
