sidebar y arreglos generales proyectos

--- a/Paginas/contact/contact.html
+++ b/Paginas/contact/contact.html
@@ -45,12 +45,12 @@
         </section>
         <section class="form__floatLeft">
             <div class="form">
-                <form action="https://formsubmit.co/ivana.guardamagna@gmail.com" class="contactForm" method="post">
+                <form action="https://formsubmit.co/af19627c9822e2429bb6a6590ee31540" method="POST" class="contactForm" >
                     <div class="formGrid">
                         <input type="hidden" name="_next" value="./thankyou.html">
-                        <input type="text" placeholder="Nombre Completo"  class="form_name" name="name" required>
-                        <input type="text" placeholder="Correo Electrónico" class="form_email" name="email" required>
-                        <textarea class="form_message" placeholder="Escriba su mensaje" required></textarea>
+                        <input type="text" name="name" placeholder="Nombre Completo"  class="form_name" required>
+                        <input type="text" name="email" placeholder="Correo Electrónico" class="form_email" required>
+                        <textarea name="message" class="form_message" placeholder="Escriba su mensaje" required></textarea>
                     </div>
                     <input type="submit" class="form_submit" value="ENVIAR">
                 </form>
@@ -141,7 +141,7 @@
         </section>
         <section class="form__floatLeft">
             <div class="form">
-                <form action="https://formsubmit.co/ivana.guardamagna@gmail.com" class="contactForm" method="post">
+                <form action="https://formsubmit.co/af19627c9822e2429bb6a6590ee31540"  method="POST" class="contactForm" >
                     <div class="formGrid">
                         <input type="hidden" name="_next" value="./thankyou.html">
                         <input type="text" placeholder="Full Name"  class="form_name" name="name" required>
