--- a/Paginas/projects/projects.html
+++ b/Paginas/projects/projects.html
@@ -13,7 +13,7 @@
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Style -->
-    <link rel="stylesheet" href="../../scss/styles.css">
+    <link rel="stylesheet" href="../../css/styles.css">
 </head>
 <body onload="checkStatusPro()">
     <header class="header spanish">
