--- a/Paginas/projects/projects.html
+++ b/Paginas/projects/projects.html
@@ -64,7 +64,7 @@
                         </div>
                     </article>
                     <article class="branding_elza">
-                        <div>
+                        <div class="imagen_elza">
                             <img src="../../img/imagen eliza.png" alt="imagen eliza">
                         </div>
                         <div class="branding_text">
@@ -85,7 +85,7 @@
                 </section>
                 <section class="projects_digital sectDigital" id="digital">
                     <article class="digital_mesa">
-                        <div>
+                        <div class="imagen_mesa">
                             <img src="../../img/imagen mesa_libre.png" alt="">
                         </div>
                         <div class="digital_text">
@@ -123,7 +123,7 @@
                 </section>
                 <section class="projects_comunicacion sectComunicacion" id="comunicacion">
                     <article class="comunicacion_qw">
-                        <div>
+                        <div class="imagen_qw">
                             <img class="img_com" src="../../img/imagen QW.png" alt="imagen qw">
                         </div>
                         <div class="branding_text">
@@ -141,7 +141,7 @@
                         </div>
                     </article>
                     <article class="comunicacion_vivero">
-                        <div>
+                        <div class="imagen_vivero">
                             <img class="img_com" src="../../img/imagen vivero.png" alt="imagen vivero">
                         </div>
                         <div class="branding_text">
@@ -159,7 +159,7 @@
                         </div>
                     </article>
                     <article class="comunicacion_candy">
-                        <div>
+                        <div class="imagen_candy">
                             <img class="img_com" src="../../img/iamgen candy.png" alt="imagen candy">
                         </div>
                         <div class="branding_text">
@@ -269,7 +269,7 @@
                         <div class="branding_text">
                             <h2 class="branding_title">Workshop Calzandos</h2>
                             <p>
-                                The first proposal I got was to be the Community Manager of a workshop that was going to be taught by two footwear designers. They needed me to administrate their social media for a few months and to help them handle the organization of the event. s
+                                The first proposal I got was to be the Community Manager of a workshop that was going to be taught by two footwear designers. They needed me to administrate their social media for a few months and to help them handle the organization of the events.
                             </p>
                             <br>
                             <p>Tasks done:</p>
@@ -284,7 +284,7 @@
                         </div>
                     </article>
                     <article class="branding_elza">
-                        <div>
+                        <div class="imagen_elza">
                             <img src="../../img/imagen eliza.png" alt="imagen eliza">
                         </div>
                         <div class="branding_text">
@@ -307,7 +307,7 @@
                 </section>
                 <section class="projects_digital sectDigital" id="digital">
                     <article class="digital_mesa">
-                        <div>
+                        <div class="imagen_mesa">
                             <img src="../../img/imagen mesa_libre.png" alt="">
                         </div>
                         <div class="digital_text">
@@ -325,7 +325,7 @@
                         </div>
                     </article>
                     <article class="digital_exessure">
-                        <div>
+                        <div class="imagen_exessure">
                             <img src="../../img/imagen exessure.png" alt="">
                         </div>
                         <div class="branding_text">
@@ -345,7 +345,7 @@
                 </section>
                 <section class="projects_comunicacion sectComunicacion" id="comunicacion">
                     <article class="comunicacion_qw">
-                        <div>
+                        <div class="imagen_qw">
                             <img class="img_com" src="../../img/imagen QW.png" alt="imagen qw">
                         </div>
                         <div class="branding_text">
@@ -363,7 +363,7 @@
                         </div>
                     </article>
                     <article class="comunicacion_vivero">
-                        <div>
+                        <div class="imagen_vivero">
                             <img class="img_com" src="../../img/imagen vivero.png" alt="imagen vivero">
                         </div>
                         <div class="branding_text">
@@ -381,7 +381,7 @@
                         </div>
                     </article>
                     <article class="comunicacion_candy">
-                        <div>
+                        <div class="imagen_candy">
                             <img class="img_com" src="../../img/iamgen candy.png" alt="imagen candy">
                         </div>
                         <div class="branding_text">
