--- a/Paginas/contact/contact.html
+++ b/Paginas/contact/contact.html
@@ -18,10 +18,12 @@
 <body>
     <header class="header spanish">
         <nav class="navbar">
-                <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
+            <div class="nav_responsive">
                 <button class="boton" id="boton_menu">
                     <i class="bi bi-list"></i>
-                </button>    
+                </button>
+                <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>  
+            </div>
                     <ul class="navbarList nav_inactive" id="navbar">
                         <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">INICIO</a></li>
                         <li class="nav_item container--submenu"><a href="../services/services.html" class="nav_link nav_linkMenu submenu-btn">SERVICIOS</a></li>
@@ -114,10 +116,12 @@
     <!-- INGLES -->
     <header class="header english">
         <nav class="navbar">
-                <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
+            <div class="nav_responsive">
                 <button class="boton" id="boton_menu">
                     <i class="bi bi-list"></i>
-                </button>    
+                </button>
+                <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>  
+            </div>
                     <ul class="navbarList nav_inactive" id="navbar">
                         <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">HOME</a></li>
                         <li class="nav_item container--submenu"><a href="../services/services.html" class="nav_link nav_linkMenu submenu-btn">SERVICES</a></li>
