--- a/Paginas/projects/projects.html
+++ b/Paginas/projects/projects.html
@@ -18,16 +18,21 @@
 <body onload="checkStatusPro()">
     <header class="header spanish">
         <nav class="navbar">
-                <a href="../../index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
+            <div class="nav_responsive">
                 <button class="boton" id="boton_menu">
                     <i class="bi bi-list"></i>
                 </button>    
+                <a href="../../index.html" class="logo nav_link">
+                    <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
+                    <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
+                </a>
+            </div>
                     <ul class="navbarList" id="navbar">
-                        <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">INICIO</a></li>
-                        <li class="nav_item"><a href="../services/services.html" class="nav_link nav_linkMenu">SERVICIOS</a></li>
-                        <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu nav_linkMenu__active">PROYECTOS</a></li>
-                        <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">SOBRE MI</a></li>
-                        <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu">CONTACTO</a></li>
+                        <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">HOME</a></li>
+                        <li class="nav_item"><a href="../services/services.html" class="nav_link nav_linkMenu">SERVICES</a></li>
+                        <li class="nav_item"><a href="../projects/projects.html" class="nav_link nav_linkMenu nav_linkMenu__active">PROJECTS</a></li>
+                        <li class="nav_item"><a href="../about/about.html" class="nav_link nav_linkMenu">ABOUT</a></li>
+                        <li class="nav_item"><a href="../contact/contact.html" class="nav_link nav_linkMenu">CONTACT</a></li>
                         <button class="btn_idioma" id="btn_ingles" onclick="checkStatusPro()">
                             <span><img class="ingles_img" src="../../img/flag-england.png" alt="ingles"></span>
                         </button>
@@ -236,10 +241,17 @@
         <!-- INGLES -->
         <header class="header english">
             <nav class="navbar">
-                    <a href="../../Home/index.html" class="logo nav_link"><img src="../../img/Component 1.svg" class="logo_svg" alt="logo"><h1 class="titulo_logo">IVANA GUARDAMAÑA</h1></a>
+                <div class="nav_responsive">
                     <button class="boton" id="boton_menu">
                         <i class="bi bi-list"></i>
                     </button>    
+                    <a href="../../index.html" class="logo nav_link">
+                        <img src="../../img/Component 1.svg" class="logo_svg" alt="logo">
+                        <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
+                    </a>
+                </div>
+
+
                         <ul class="navbarList" id="navbar">
                             <li class="nav_item"><a href="../../index.html" class="nav_link nav_linkMenu">HOME</a></li>
                             <li class="nav_item"><a href="../services/services.html" class="nav_link nav_linkMenu">SERVICES</a></li>
