--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
     <!-- ESPAÑOL -->
     <header class="header spanish">
         <nav class="navbar">
+            <div class="nav_responsive">
+                <button class="boton" id="nav_esp">
+                    <i class="bi bi-list"></i>
+                </button>  
                 <a href="./index.html" class="logo nav_link"><img src="./img/Component 1.svg" class="logo_svg" alt="logo">
                     <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
                 </a>
-                <button class="boton" id="nav_esp">
-                    <i class="bi bi-list"></i>
-                </button>    
+            </div>
                     <ul class="navbarList" id="navbar">
                         <li class="nav_item"><a href="./index.html" class="nav_link nav_linkMenu nav_linkMenu__active">INICIO</a></li>
                         <li class="nav_item"><a href="./Paginas/services/services.html" class="nav_link nav_linkMenu">SERVICIOS</a></li>
@@ -169,12 +171,14 @@
     <!-- INGLES -->
     <header class="header english">
         <nav class="navbar">
+            <div class="nav_responsive">
+                <button class="boton" id="nav_esp">
+                    <i class="bi bi-list"></i>
+                </button>  
                 <a href="./index.html" class="logo nav_link"><img src="./img/Component 1.svg" class="logo_svg" alt="logo">
                     <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
                 </a>
-                <button class="boton" id="nav_ing">
-                    <i class="bi bi-list"></i>
-                </button>    
+            </div>   
                     <ul class="navbarList" id="navbar">
                         <li class="nav_item"><a href="./index.html" class="nav_link nav_linkMenu nav_linkMenu__active">HOME</a></li>
                         <li class="nav_item"><a href="./Paginas/services/services.html" class="nav_link nav_linkMenu">SERVICES</a></li>
