--- a/index.html
+++ b/index.html
@@ -191,8 +191,6 @@
                     </ul>
         </nav>
     </header>
-
-    </button>
     <main class="main_top english">
         <section class="section1">
             <div class="sectionHola">
@@ -236,7 +234,6 @@
                     </div>
                 </div>  
         </section>
-
         <section class="sectionProyectos">
             <h3>My projects</h3>
             <div class="proyectos proyectos1">
@@ -294,22 +291,27 @@
             <img src="./img/Component 1.svg" class="logo_svg" alt="logo">
             <h1 class="titulo_logo">IVANA GUARDAMAÑA</h1>
         </section>
+        <button class="btn_responsive"></button>
         <section class="design_footer">
-            <h5>Web Design:</h5>
-            <ul>
-                <li>
-                    <p><a href=""><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
-                </li>
-                <li>
-                    <p><a href=""><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
-
-                </li>
-                <li>
-                    <p><a href=""><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
-                </li>
-                <li>
-                    <p><a href=""><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
-                </li>
+            <h5 class="title_footer1">Web Design:</h5>
+            <h5 class="title_footer2">Design & Development</h5>
+            <ul class="design_list_resp">
+                <div class="design_resp1">
+                    <li>
+                        <p><a href=""><i class="bi bi-linkedin"></i></a>Julieta Milito</p>
+                    </li>
+                    <li>
+                        <p><a href=""><i class="bi bi-linkedin"></i></a>Brenda Zaya</p>
+                    </li>
+                </div>
+                <div class="design_resp2">
+                    <li>
+                        <p><a href=""><i class="bi bi-linkedin"></i></a>Leandro Waserman</p>
+                    </li>
+                    <li>
+                        <p><a href=""><i class="bi bi-linkedin"></i></a>Germán Benavides</p>
+                    </li>
+                </div>
             </ul>
         </section>
     </footer>
